// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBox can override margin 1`] = `
<div
  className="message-box"
  style={
    Object {
      "--message-box-margin": "10rem 0 10rem 0",
    }
  }
>
  <div
    className="message-box-body"
    data-testid="message-box"
  >
    Body text
  </div>
</div>
`;

exports[`MessageBox can override text 1`] = `
<div
  className="message-box"
>
  <div
    className="message-box-body"
    data-testid="message-box"
  >
    Body text
  </div>
</div>
`;

exports[`MessageBox matches snapshot 1`] = `
<div
  className="message-box"
>
  <div
    className="message-box-body"
    data-testid="message-box"
  />
</div>
`;
